--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                             <img src="images/a3.png" alt="Amarjeet Kumar" class="slider-image">
                         </div>
                         <div class="profile-frame">
-                            <div class="profile-name">अमरजेट कुमार</div>
+                            <div class="profile-name">अमरजीत कुमार</div>
                             <div class="profile-title">Visionary Leader</div>
                         </div>
                     </div>
