Add Location Update section with Rozgaar Mahakumbh 2025 content
- Added new Location Update section below Social Media
- Integrated Google Maps embed for Indira Gandhi Pratishthan location
- Added 5 new images from update folder with proper formatting
- Included 2 videos from Rozgaar Mahakumbh 2025 event
- Enhanced image formatting with consistent aspect ratios and overlays
- Added descriptive alt text and lazy loading for better performance
- Updated contact section with new location and Google Maps link
- Improved responsive design for mobile devices

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Amarjeet Kumar - Visionary Philanthropist | Aathmika Foundation</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Noto+Sans+Devanagari:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css?v=1">
 </head>
 <body>
     <!-- Animated Orange Ribbon -->
@@ -96,6 +96,114 @@
                     </svg>
                     X (Twitter)
                 </a>
+            </div>
+        </div>
+    </section>
+
+    <!-- Location Update Section -->
+    <section id="location-update" class="location-update">
+        <div class="container">
+            <div class="section-header">
+                <h2>स्थान अपडेट</h2>
+                <p>Location Update</p>
+            </div>
+            <div class="location-content">
+                <div class="location-info">
+                    <h3>हमारा नया स्थान</h3>
+                    <p>Our New Location</p>
+                    <div class="location-address">
+                        <h4>📍 Indira Gandhi Pratishthan</h4>
+                        <p>Noida Sector 62, Noida, Uttar Pradesh, India</p>
+                    </div>
+                    <div class="map-container">
+                        <iframe 
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3503.8260248260495!2d81.01060485839844!3d26.868024826049805!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMjbCsDUyJzA0LjkiTiA4McKwMDAnMzguMiJF!5e0!3m2!1sen!2sin!4v1693123456789!5m2!1sen!2sin"
+                            width="100%" 
+                            height="300" 
+                            style="border:0;" 
+                            allowfullscreen="" 
+                            loading="lazy" 
+                            referrerpolicy="no-referrer-when-downgrade">
+                        </iframe>
+                        <a href="https://www.google.com/maps/search/Indira%20Gandhi%20Pratishthan/@26.868024826049805,81.01060485839844,17z?hl=en" target="_blank" class="map-link-btn">
+                            View Full Map
+                        </a>
+                    </div>
+                </div>
+                <div class="location-media">
+                    <h3>रोजगार महाकुंभ 2025</h3>
+                    <p>Rozgaar Mahakumbh 2025</p>
+                    <div class="event-info">
+                        <p class="event-description">मैंने Rozgaar Mahakumbh 2025 में कॉर्पोरेट प्रतिनिधि के रूप में भाग लिया। यह इवेंट 26 से 28 अगस्त, 2025 तक आयोजित किया गया था और इसे Skill Samagam द्वारा संचालित किया गया। इस महाकुंभ का उद्देश्य लोगों को रोजगार के अवसर प्रदान करना, उन्हें सशक्त बनाना और उनकी क्षमता को बढ़ावा देना है – अर्थात् <strong>Employ | Empower | Evolve</strong>।</p>
+                        <p class="event-description-english">I participated in Rozgaar Mahakumbh 2025 as a Corporate Representative. This event was organized from August 26-28, 2025, and was conducted by Skill Samagam. The purpose of this Mahakumbh is to provide employment opportunities to people, empower them, and promote their capabilities – that is, <strong>Employ | Empower | Evolve</strong>.</p>
+                    </div>
+                    <div class="media-grid">
+                        <div class="media-item image-item">
+                            <img src="update/WhatsApp%20Image%202025-08-26%20at%2011.55.09.jpeg" 
+                                 alt="Rozgaar Mahakumbh 2025 - Corporate Representative Participation" 
+                                 loading="lazy">
+                            <div class="media-overlay">
+                                <span class="media-title">Event Participation</span>
+                            </div>
+                        </div>
+                        <div class="media-item image-item">
+                            <img src="update/WhatsApp%20Image%202025-08-26%20at%2011.55.14(1).jpeg" 
+                                 alt="Rozgaar Mahakumbh 2025 - Employment Opportunities Discussion" 
+                                 loading="lazy">
+                            <div class="media-overlay">
+                                <span class="media-title">Employment Focus</span>
+                            </div>
+                        </div>
+                        <div class="media-item image-item">
+                            <img src="update/WhatsApp%20Image%202025-08-26%20at%2011.55.14.jpeg" 
+                                 alt="Rozgaar Mahakumbh 2025 - Skill Development Initiative" 
+                                 loading="lazy">
+                            <div class="media-overlay">
+                                <span class="media-title">Skill Development</span>
+                            </div>
+                        </div>
+                        <div class="media-item image-item">
+                            <img src="update/WhatsApp%20Image%202025-08-26%20at%2011.55.16.jpeg" 
+                                 alt="Rozgaar Mahakumbh 2025 - Empowerment Through Employment" 
+                                 loading="lazy">
+                            <div class="media-overlay">
+                                <span class="media-title">Empowerment Initiative</span>
+                            </div>
+                        </div>
+                        <div class="media-item image-item">
+                            <img src="update/WhatsApp%20Image%202025-08-26%20at%2011.55.39.jpeg" 
+                                 alt="Rozgaar Mahakumbh 2025 - Community Engagement and Growth" 
+                                 loading="lazy">
+                            <div class="media-overlay">
+                                <span class="media-title">Community Growth</span>
+                            </div>
+                        </div>
+                        <div class="media-item video-item">
+                            <video controls 
+                                   poster="update/WhatsApp%20Image%202025-08-26%20at%2011.55.09.jpeg"
+                                   preload="metadata">
+                                <source src="update/WhatsApp%20Video%202025-08-26%20at%2011.55.12.mp4" type="video/mp4">
+                                Your browser does not support the video tag.
+                            </video>
+                            <div class="media-overlay video-overlay">
+                                <span class="media-title">Event Highlights</span>
+                                <div class="play-icon">▶</div>
+                            </div>
+                        </div>
+                        <div class="media-item video-item">
+                            <video controls 
+                                   poster="update/WhatsApp%20Image%202025-08-26%20at%2011.55.16.jpeg"
+                                   preload="metadata">
+                                <source src="update/WhatsApp%20Video%202025-08-26%20at%2011.55.20.mp4" type="video/mp4">
+                                Your browser does not support the video tag.
+                            </video>
+                            <div class="media-overlay video-overlay">
+                                <span class="media-title">Event Coverage</span>
+                                <div class="play-icon">▶</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
@@ -278,6 +386,31 @@
                     <div class="slide">
                         <img src="gallery/WhatsApp%20Image%202025-08-08%20at%2015.18.35%20(4).jpeg" alt="Gallery Image 11">
                     </div>
+                    <div class="slide">
+                        <img src="update/WhatsApp%20Image%202025-08-26%20at%2011.55.09.jpeg" 
+                             alt="Rozgaar Mahakumbh 2025 - Amarjeet Kumar as Corporate Representative" 
+                             loading="lazy">
+                    </div>
+                    <div class="slide">
+                        <img src="update/WhatsApp%20Image%202025-08-26%20at%2011.55.14(1).jpeg" 
+                             alt="Employment Opportunities at Rozgaar Mahakumbh 2025" 
+                             loading="lazy">
+                    </div>
+                    <div class="slide">
+                        <img src="update/WhatsApp%20Image%202025-08-26%20at%2011.55.14.jpeg" 
+                             alt="Skill Development Programs at Rozgaar Mahakumbh 2025" 
+                             loading="lazy">
+                    </div>
+                    <div class="slide">
+                        <img src="update/WhatsApp%20Image%202025-08-26%20at%2011.55.16.jpeg" 
+                             alt="Empowerment Through Employment - Rozgaar Mahakumbh 2025" 
+                             loading="lazy">
+                    </div>
+                    <div class="slide">
+                        <img src="update/WhatsApp%20Image%202025-08-26%20at%2011.55.39.jpeg" 
+                             alt="Community Engagement and Growth at Rozgaar Mahakumbh 2025" 
+                             loading="lazy">
+                    </div>
                 </div>
                 <button class="slider-arrow next-arrow">❯</button>
                 <div class="slider-dots"></div>
@@ -304,7 +437,8 @@
                     </div>
                     <div class="contact-card">
                         <h3>📍 पता</h3>
-                        <p>Noida Sector 62<br>Noida, Uttar Pradesh, India</p>
+                        <p>Indira Gandhi Pratishthan<br>Noida Sector 62<br>Noida, Uttar Pradesh, India</p>
+                        <a href="https://www.google.com/maps/search/Indira%20Gandhi%20Pratishthan/@26.868024826049805,81.01060485839844,17z?hl=en" target="_blank" class="map-link">View on Google Maps</a>
                     </div>
                 </div>
                 <div class="cta-section">
@@ -326,6 +460,6 @@
         </div>
     </footer>
 
-    <script src="app.js"></script>
+    <script src="app.js?v=1"></script>
 </body>
 </html>
