--- a/index.html
+++ b/index.html
@@ -179,27 +179,29 @@
                             </div>
                         </div>
                         <div class="media-item video-item">
-                            <video controls 
-                                   poster="update/WhatsApp%20Image%202025-08-26%20at%2011.55.09.jpeg"
+                            <video poster="update/WhatsApp%20Image%202025-08-26%20at%2011.55.09.jpeg"
                                    preload="metadata">
                                 <source src="update/WhatsApp%20Video%202025-08-26%20at%2011.55.12.mp4" type="video/mp4">
                                 Your browser does not support the video tag.
                             </video>
+                            <div class="video-controls-overlay">
+                                <button class="video-play-btn" onclick="playVideo(this)">▶</button>
+                            </div>
                             <div class="media-overlay video-overlay">
                                 <span class="media-title">Event Highlights</span>
-                                <div class="play-icon">▶</div>
                             </div>
                         </div>
                         <div class="media-item video-item">
-                            <video controls 
-                                   poster="update/WhatsApp%20Image%202025-08-26%20at%2011.55.16.jpeg"
+                            <video poster="update/WhatsApp%20Image%202025-08-26%20at%2011.55.16.jpeg"
                                    preload="metadata">
                                 <source src="update/WhatsApp%20Video%202025-08-26%20at%2011.55.20.mp4" type="video/mp4">
                                 Your browser does not support the video tag.
                             </video>
+                            <div class="video-controls-overlay">
+                                <button class="video-play-btn" onclick="playVideo(this)">▶</button>
+                            </div>
                             <div class="media-overlay video-overlay">
                                 <span class="media-title">Event Coverage</span>
-                                <div class="play-icon">▶</div>
                             </div>
                         </div>
                     </div>
@@ -459,6 +461,15 @@
             <p>Designed with respect and admiration for visionary leadership.</p>
         </div>
     </footer>
+
+    <!-- Image Modal -->
+    <div id="imageModal" class="modal">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <img id="modalImage" src="" alt="">
+            <div id="modalCaption"></div>
+        </div>
+    </div>
 
     <script src="app.js?v=1"></script>
 </body>
